src/main/metadata-au/objects/Package_Item__c.object
<CustomObject>
    <description>Campaign: Conjunction object of Campaign Package and Campaign Offering</description>
    <fields>
        <fullName>Offering__c</fullName>
        <label>Offering</label>
        <referenceTo>Campaign_Offering__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <referenceTo>Campaign_Package__c</referenceTo>
        <relationshipLabel>Package Items</relationshipLabel>
        <relationshipName>Package_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Campaign_ID__c</fullName>
        <formula>Package_Name__r.Campaign__c</formula>
        <label>Related Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Package Item</label>
    <nameField>
        <displayFormat>CPI-{0000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_campaign_offering_and_package</fullName>
        <active>false</active>
        <errorConditionFormula>Related_Campaign_ID__c &lt;&gt;  Offering__r.Campaign__c</errorConditionFormula>
        <errorDisplayField>Offering__c</errorDisplayField>
        <errorMessage>The offering should belong to the same campaign as the package.</errorMessage>
    </validationRules>
</CustomObject>  